added introduction, study area, and methods

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -5,28 +5,25 @@
       "id": "8aede979-068f-489d-a683-139e58cb6013",
       "metadata": {},
       "source": [
-        "## Land Cover Classification in the Deschutes River – Capitol Lake Subwatershed, WA\n",
+        "### Land Cover Classification in the Deschutes River – Capitol Lake Subwatershed, WA\n",
         "\n",
-        "### Introduction\n",
-        "### Study Area\n",
-        "### Methods\n",
-        "### Data Citation\n",
+        "#### **Introduction**\n",
         "\n",
-        "In this notebook, you will use a k-means **unsupervised** clustering\n",
-        "algorithm to group pixels by similar spectral signatures. **k-means** is\n",
-        "an **exploratory** method for finding patterns in data. Because it is\n",
-        "unsupervised, you don’t need any training data for the model. You also\n",
-        "can’t measure how well it “performs” because the clusters will not\n",
-        "correspond to any particular land cover class. However, we expect at\n",
-        "least some of the clusters to be identifiable as different types of land\n",
-        "cover.\n",
+        "Land-cover classification is an important tool for natural resource management, as it impacts many other ecological functions and processes. Types of land cover have different impacts on water quality, pollution, resource availability, climate, habitat, and more (U.S. EPA, 2025). Understanding the types of land cover and how they are changing over time is important to making land use, conservation, and planning decisions. Thurston County is a growing county in the U.S. and is projected to experience major growth over the next twenty years. According to the WA Department of Ecology (2025), the Deschutes watershed has known water quality issues associated with development, land use, and ongoing pollution. The Deschutes watershed in Thurston County is a useful case study for land-cover classification, as it is a mixed-use watershed. Understanding land cover classification from spatial data helps to inform decisions for sustainable growth and changing land use. We can explore land cover through satellite imagery and remote sensing. This analysis applies an unsupervised machine learning algorithm (k-means clustering) to identify clusters based on spectral reflectance values and explore potential patterns in land cover types such as water, forest, urban, and agriculture.\n",
         "\n",
-        "You will use the [harmonized Sentinel/Landsat multispectral\n",
-        "dataset](https://lpdaac.usgs.gov/documents/1698/HLS_User_Guide_V2.pdf).\n",
-        "You can access the data with an [Earthdata\n",
-        "account](https://www.earthdata.nasa.gov/learn/get-started) and the\n",
-        "[`earthaccess` library from\n",
-        "NSIDC](https://github.com/nsidc/earthaccess):"
+        "#### **Study Area**\n",
+        "\n",
+        "The Deschutes River originates in the Bald Hills in Lewis County, where it flows 57 miles through Thurston County to Tumwater Falls and into Capitol Lake, a managed reservoir & estuarine system in the South Puget Sound region. The Deschutes is one of the largest river systems in Thurston County and is a watershed that contains a variety of land uses, including agriculture, recreational, urban, and forest lands.\n",
+        "\n",
+        "The subwatershed used for this analysis was HUC12 171100160202 (Deschutes River - Capitol Lake) from the U.S. Geological Survey National Watershed Boundary Dataset. With ongoing development in the area and projected growth of 30% by 2045 (Thurston 2045 Comprehensive Plan), this watershed is a good case study for examining land-cover classifications in the region.\n",
+        "\n",
+        "#### **Methods**\n",
+        "\n",
+        "For this analysis, cloud masking was performed to remove atmospheric interference and irregularities to ensure that accurate surface reflectance values were included. Multispectral imagery (harmonized Sentinel/Landset data) from the NASA Earth Data platform was used to get the surface reflectance values from spectral bands / wavelengths. The satellite imagery used was from June to August 2024. These raster images were then stacked to give a complete picture of surface reflectance across spectral wavelengths. These differences in surface reflectance can be used to look at land-cover classifications.\n",
+        "\n",
+        "The spectral reflectance values were then used as an input feature for an unsupervised machine learning clustering algorithm, k-means. As an unsupervised model, it does not use training data input. We applied the k-means clustering algorithm from the scikit-learn library, which groups pixels based on this spectral similarity. K-means clusters the data based on a selected number of clusters. In this analysis, six clusters were used, as this was an exploratory analysis for land classification. K-means cluster values of five through eight were tested, and six was the most clear with the least amount of visual noise. Six clusters are a typical amount expected for land-cover classification. K-means classifies (without labels) the number of clusters into similar groups based on spectral similarity.\n",
+        "\n",
+        "K-means is a useful tool for land-cover classification because it doesn’t require training data. Different landscape features (water, impervious surface, forest, etc.) have different reflectance signatures that can be classified without bias and directly from the data in the satellite imagery and raster dataset. We can then make determinations with background knowledge and maps from the area to make land-cover interpretations. The land-cover inferences are speculative and exploratory in nature, due to the unsupervised nature of K-means."
       ]
     },
     {
@@ -1136,17 +1133,6 @@
     },
     {
       "cell_type": "markdown",
-      "id": "e779d07a-9ebd-4d84-af53-3fd1c211606c",
-      "metadata": {},
-      "source": [
-        "The watershed site for this analysis is in the Mississippi Delta to the southeast outskirts of New Orleans, Louisiana. The watershed boundary was determined from the USGS National Watershed Boundary dataset at the Hydrologic Unit Code (HUC) 12 - 080902030506. This area is experiencing rapid land loss, salt water intrusion, and wetland degradation (USGS, 2011). New Orleans was originally built on a wetland habitat and is a below sea level community on a delta. It experiences unique challenges that come from coastal and deltaic hydrologic processes including flooding and sediment deposits (Day et al., 2007). The city and area is experiencing significant water-related threats due to climate change, and currently depends on levees and pumps for its survival (Day et al., 2021).\n",
-        "\n",
-        "<u>Data citation:</u>\n",
-        "U.S. Geological Survey, 2024, National watershed boundary (HUC12) dataset for the conterminous United States, retrieved [02/06/2026], from https://data.usgs.gov/datacatalog/data/USGS:63d31e73d34e06fef1501265. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "f9903174-b87c-4026-8564-bd3e62dbfd14",
       "metadata": {},
       "source": [
@@ -1669,35 +1655,7 @@
       "id": "c2e7859c-156a-4357-a1cd-b38192090811",
       "metadata": {},
       "source": [
-        "### Step 3b: Compile information about each granule\n",
-        "\n",
-        "I recommend building a GeoDataFrame, as this will allow you to plot the\n",
-        "granules you are downloading and make sure they line up with your\n",
-        "shapefile. You could also use a DataFrame, dictionary, or a custom\n",
-        "object to store this information.\n",
-        "\n",
-        "<link rel=\"stylesheet\" type=\"text/css\" href=\"./assets/styles.css\"><div class=\"callout callout-style-default callout-titled callout-task\"><div class=\"callout-header\"><div class=\"callout-icon-container\"><i class=\"callout-icon\"></i></div><div class=\"callout-title-container flex-fill\">Try It</div></div><div class=\"callout-body-container callout-body\"><ol type=\"1\">\n",
-        "<li>For each search result:\n",
-        "<ol type=\"1\">\n",
-        "<li>Get the following information (HINT: look at the [‘umm’] values for\n",
-        "each search result):\n",
-        "<ul>\n",
-        "<li>granule id (UR)</li>\n",
-        "<li>datetime</li>\n",
-        "<li>geometry (HINT: check out the shapely.geometry.Polygon class to\n",
-        "convert points to a Polygon)</li>\n",
-        "</ul></li>\n",
-        "<li>Open the granule files. I recommend opening one granule at a time,\n",
-        "e.g. with (<code>earthaccess.open([result]</code>).</li>\n",
-        "<li>For each file (band), get the following information:\n",
-        "<ul>\n",
-        "<li>file handler returned from <code>earthaccess.open()</code></li>\n",
-        "<li>tile id</li>\n",
-        "<li>band number</li>\n",
-        "</ul></li>\n",
-        "</ol></li>\n",
-        "<li>Compile all the information you collected into a GeoDataFrame</li>\n",
-        "</ol></div></div>"
+        "### Step 3b: Compile information about each granule"
       ]
     },
     {
