added conclusions and citation

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -9,7 +9,7 @@
         "\n",
         "#### **Introduction**\n",
         "\n",
-        "Land-cover classification is an important tool for natural resource management, as it impacts many other ecological functions and processes. Types of land cover have different impacts on water quality, pollution, resource availability, climate, habitat, and more (U.S. EPA, 2025). Understanding the types of land cover and how they are changing over time is important to making land use, conservation, and planning decisions. Thurston County is a growing county in the U.S. and is projected to experience major growth over the next twenty years. According to the WA Department of Ecology (2025), the Deschutes watershed has known water quality issues associated with development, land use, and ongoing pollution. The Deschutes watershed in Thurston County is a useful case study for land-cover classification, as it is a mixed-use watershed. Understanding land cover classification from spatial data helps to inform decisions for sustainable growth and changing land use. We can explore land cover through satellite imagery and remote sensing. This analysis applies an unsupervised machine learning algorithm (k-means clustering) to identify clusters based on spectral reflectance values and explore potential patterns in land cover types such as water, forest, urban, and agriculture.\n",
+        "Land-cover classification is an important tool for natural resource management, as it impacts many other ecological functions and processes. Types of land cover have different impacts on water quality, pollution, resource availability, climate, habitat, and more (U.S. EPA, 2025). Understanding the types of land cover and how they are changing over time is important to making land use, conservation, and planning decisions. Thurston County is a growing county in the U.S. and is projected to experience major growth over the next twenty years. According to the WA Department of Ecology (n.d.), the Deschutes watershed has known water quality issues associated with development, land use, and ongoing pollution. The Deschutes watershed in Thurston County is a useful case study for land-cover classification, as it is a mixed-use watershed. Understanding land cover classification from spatial data helps to inform decisions for sustainable growth and changing land use. We can explore land cover through satellite imagery and remote sensing. This analysis applies an unsupervised machine learning algorithm (k-means clustering) to identify clusters based on spectral reflectance values and explore potential patterns in land cover types such as water, forest, urban, and agriculture.\n",
         "\n",
         "#### **Study Area**\n",
         "\n",
@@ -23,7 +23,14 @@
         "\n",
         "The spectral reflectance values were then used as an input feature for an unsupervised machine learning clustering algorithm, k-means. As an unsupervised model, it does not use training data input. We applied the k-means clustering algorithm from the scikit-learn library, which groups pixels based on this spectral similarity. K-means clusters the data based on a selected number of clusters. In this analysis, six clusters were used, as this was an exploratory analysis for land classification. K-means cluster values of five through eight were tested, and six was the most clear with the least amount of visual noise. Six clusters are a typical amount expected for land-cover classification. K-means classifies (without labels) the number of clusters into similar groups based on spectral similarity.\n",
         "\n",
-        "K-means is a useful tool for land-cover classification because it doesn’t require training data. Different landscape features (water, impervious surface, forest, etc.) have different reflectance signatures that can be classified without bias and directly from the data in the satellite imagery and raster dataset. We can then make determinations with background knowledge and maps from the area to make land-cover interpretations. The land-cover inferences are speculative and exploratory in nature, due to the unsupervised nature of K-means."
+        "K-means is a useful tool for land-cover classification because it doesn’t require training data. Different landscape features (water, impervious surface, forest, etc.) have different reflectance signatures that can be classified without bias and directly from the data in the satellite imagery and raster dataset. We can then make determinations with background knowledge and maps from the area to make land-cover interpretations. The land-cover inferences are speculative and exploratory in nature, due to the unsupervised nature of K-means.\n",
+        "\n",
+        "#### <u>Data Citations</u>\n",
+        "- Masek, J., Ju, J., Roger, J.-C., Skakun, S., Vermote, E., Claverie, M., Dungan, J., Yin, Z., Freitag, B., &amp; Justice, C. (2021). <i>HLS Operational Land Imager Surface Reflectance and TOA Brightness Daily Global 30m v2.0</i> [Data set]. NASA Land Processes Distributed Active Archive Center. https://doi.org/10.5067/HLS/HLSL30.002 Date Accessed: 2026-02-16\n",
+        "\n",
+        "- U.S. Geological Survey, 2024, National watershed boundary (HUC12) dataset for the conterminous United States, retrieved [02/16/2026], from https://data.usgs.gov/datacatalog/data/USGS:63d31e73d34e06fef1501265.\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -5904,26 +5911,14 @@
     },
     {
       "cell_type": "markdown",
-      "id": "1f764ccf-d111-4f47-bcea-8c10a7cac441",
-      "metadata": {},
-      "source": [
-        "<link rel=\"stylesheet\" type=\"text/css\" href=\"./assets/styles.css\"><div class=\"callout callout-style-default callout-titled callout-respond\"><div class=\"callout-header\"><div class=\"callout-icon-container\"><i class=\"callout-icon\"></i></div><div class=\"callout-title-container flex-fill\">Reflect and Respond</div></div><div class=\"callout-body-container callout-body\"><p>Don’t forget to interpret your plot!</p></div></div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "4efe872d-a8ab-46bd-816f-fc5194b777a5",
       "metadata": {},
       "source": [
-        "### **K-Means Land Cover Classification in Missippi Delta Watershed in Summer 2024**\n",
+        "### **K-Means Land Cover Classification in Deschutes River - Capitol Lake Watershed in Summer 2024**\n",
         "\n",
-        "Currently, New Orleans is one of the cities in the U.S. most vulnerable to impacts from climate change. This is in part due to the normal deltaic processes, such as subsidence, associated with being built on a river delta. New Orleans relies on engineering, through pumps and levees, to keep the city above water. Deltas rely on natural deposits of sediment to maintain their elevation. Due to these flooding interventions, the city is sinking. New Orleans experiences rapid land loss at an incredible rate of wetland loss the size of a football field every 100 minutes (Restore the Mississippi Delta, n.d.). This process is accelerated by climate change impacts such as increasing storm intensity (including hurricanes), faster sea-level rise, and other factors. Coastal and deltaic areas are important economic hubs as ports support the region and the nation. Ports have historically been important for economic growth and commerce; New Orleans is no exception (Day et al., 2021). The area was historically a significant wetland habitat, which has also been lost and degraded significantly due to development, land use, and the interruption of natural river hydrologic processes.\n",
+        "The comparison between the true color RGB image (left) and the k-means spectral reflectance clusters (right) used unsupervised machine learning to explore land-cover classification in the Deschutes River-Capitol Lake watershed. The Deschutes River watershed, and particularly the subwatershed (HUC12 171100160202) that drains into Capitol Lake, is projected to experience significant population growth over the next 20 years. The watershed is already vulnerable to pollution and experiences water quality issues in parameters such as dissolved oxygen, pH, water temperature, fecal coliform, and sediment. Understanding land covers in the area is important for making informed decisions about land use to support watershed management and sustainable growth. The above k-means analysis clustered pixels with similar reflectance values to explore the land cover classifications. \n",
         "\n",
-        "​This analysis used unsupervised machine learning, K-means, to look at land cover classifications in the watershed on the Mississippi Delta (HUC12 - 080902030506). Five K-Means clusters were used for this analysis. This area has significant wetland and saltwater intrusions, so we would expect those to be clustered. We can see some clustering that may be showing differences as the reflectance data for salt and fresh water. The salt water intrusions might be visible here, , with perhaps yellow being fresh water and dark blue being seawater. We also see clustering of what maybe land, wetlands, agriculture, development, and perhaps active erosion areas. The pink might be wetlands scattered throughout. In the RGB imagery, the water might appear brown due to high levels of suspended sediments in the water. The watershed is on the Mississippi River Delta, so we would expect a high sediment load. These wetlands and the deltaic watershed are very important for ecological health, biodiversity, and supporting fishing economies. In future analysis, it would be interesting to compare a time series of k-means to see any land cover classification differences. \n",
-        "\n",
-        "\n",
-        "<u>Data Citation</u>\n",
-        "Masek, J., Ju, J., Roger, J.-C., Skakun, S., Vermote, E., Claverie, M., Dungan, J., Yin, Z., Freitag, B., &amp; Justice, C. (2021). <i>HLS Operational Land Imager Surface Reflectance and TOA Brightness Daily Global 30m v2.0</i> [Data set]. NASA Land Processes Distributed Active Archive Center. https://doi.org/10.5067/HLS/HLSL30.002 Date Accessed: 2026-02-07"
+        "In this geographic region, land covers could potentially include water, wetlands, urban / impervious, agriculture / vegetation, bare soil, and dense forest. While we cannot know the different land covers with certainty, as k-means does not label clusters, the clusters observed in the the k-means analysis do support these classifications. When compared with true color RGB, it does appear to classify different land covers based on their spectral bands accurately. The clusters in the k-means image, cluster 3 is mostly likely open water, cluster 4 could be urban development and impervious surfaces such as roads, cluster 5 aligns with dense forested areas, cluster 2 appears as mixed use vegetation such as agriculture or greenspace, and cluster 1 as additional development. This data analysis was exploratory to look at the surface reflectance data to observe land cover patterns. Land cover classification from satellite imagery is helpful for informing decisions on natural resources management. Future analyses could add additional environmental datasets to refine the clustering, or track temporal changes in clustering over time."
       ]
     },
     {
@@ -5933,13 +5928,10 @@
       "source": [
         "<u>Citations</u>\n",
         "\n",
-        "- Day, J. W., Jr., Boesch, D. F., Clairain, E. J., Kemp, G. P., Laska, S. B., Mitsch, W. J., Mashriqui, H., Reed, D. J., Shabman, L., Simenstad, C. A., Streever, B. J., Twilley, R. R., Watson, C. C., Wells, J. T., & Whigham, D. F. (2007). Restoration of the Mississippi Delta: Lessons from Hurricanes Katrina and Rita. Science, 315(5819), 1679–1684. https://doi.org/10.1126/science.1137030\n",
+        "- Deschutes River and tributaries - Washington State Department of Ecology. (n.d.). https://ecology.wa.gov/water-shorelines/water-quality/water-improvement/total-maximum-daily-load-process/directory-of-improvement-projects/deschutes-river-and-tributaries#:~:text=The%20Deschutes%20River%20is%20under,process%20to%20address%20these%20problems\n",
         "\n",
-        "- Day, J. W., Hunter, R., Kemp, G. P., Moerschbaecher, M., & Brantley, C. G. (2021). The “problem” of New Orleans and diminishing sustainability of Mississippi River management — future options. Water, 13(6), 813. https://doi.org/10.3390/w13060813\n",
-        "\n",
-        "- Restore the Mississippi River Delta Coalition. (n.d). Land loss in the Mississippi River Delta. Retrieved February 6, 2026, from https://mississippiriverdelta.org/our-coastal-crisis/land-loss/\n",
-        "\n",
-        "- U.S. Geological Survey. (2011, November 11). The Mississippi River Delta Basin. U.S. Department of the Interior. Retrieved February 11, 2026, from https://eros.usgs.gov/media-gallery/image-of-the-week/the-mississippi-river-delta-basin"
+        "- Land Cover - US EPA. (2025, June 17). US EPA. https://www.epa.gov/report-environment/land-cover#:~:text=The%20EPA%20uses%20land%20cover%20information%20for,Human%20activities%2C%20such%20as:%20*%20Population%20change\n",
+        "\n"
       ]
     }
   ],
