--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "The Deschutes River originates in the Bald Hills in Lewis County, where it flows 57 miles through Thurston County to Tumwater Falls and into Capitol Lake, a managed reservoir & estuarine system in the South Puget Sound region. The Deschutes is one of the largest river systems in Thurston County and is a watershed that contains a variety of land uses, including agriculture, recreational, urban, and forest lands.\n",
         "\n",
-        "The subwatershed used for this analysis was HUC12 171100160202 (Deschutes River - Capitol Lake) from the U.S. Geological Survey National Watershed Boundary Dataset. With ongoing development in the area and projected growth of 30% by 2045 (Thurston 2045 Comprehensive Plan), this watershed is a good case study for examining land-cover classifications in the region.\n",
+        "The subwatershed used for this analysis was HUC12 171100160202 (Deschutes River - Capitol Lake) from the U.S. Geological Survey National Watershed Boundary Dataset. With ongoing development in the area and projected growth of 30% by 2045 ((Thurston County Community Planning & Economic Development, 2025), this watershed is a good case study for examining land-cover classifications in the region.\n",
         "\n",
         "#### **Methods**\n",
         "\n",
@@ -1204,6 +1204,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Check results (remove output for cleaner portfolio analysis)\n",
         "results"
       ]
     },
@@ -5487,6 +5488,8 @@
         "- Deschutes River and tributaries - Washington State Department of Ecology. (n.d.). https://ecology.wa.gov/water-shorelines/water-quality/water-improvement/total-maximum-daily-load-process/directory-of-improvement-projects/deschutes-river-and-tributaries#:~:text=The%20Deschutes%20River%20is%20under,process%20to%20address%20these%20problems\n",
         "\n",
         "- Land Cover - US EPA. (2025, June 17). US EPA. https://www.epa.gov/report-environment/land-cover#:~:text=The%20EPA%20uses%20land%20cover%20information%20for,Human%20activities%2C%20such%20as:%20*%20Population%20change\n",
+        "\n",
+        "- Thurston County Community Planning & Economic Development. (2025). Thurston County 2045 Comprehensive Plan Update [Report]. https://www.thurstoncountywa.gov/departments/community-planning-and-economic-development-cped/community-planning/thurston-2045\n",
         "\n"
       ]
     }
